--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -1,7 +1,7 @@
 article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block}
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,figure,fieldset,legend,button,img,input,textarea,th,td{margin:0;padding:0;border:0;}
-a{text-decoration: none;color: #444;}
-body{font: 16px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #222;}
+a{text-decoration: none;color: #333;}
+body{font: 16px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
 ::selection{background: #222;color: #fff;}
 ::-webkit-scrollbar{width: 3px;height: 3px;}
 ::-webkit-scrollbar-button{display: none;}
@@ -17,15 +17,14 @@ li{list-style: none;}
     width: 2rem; height: 2rem;
     text-align: center; line-height: 2rem;
     transition: all .2s ease;
-    background: rgba(255,255,255,.94);
+
 }
 .btn-conch:hover{
-    border-radius: 1rem;
-    background: rgba(0,0,0,.1);
+    background-color: rgba(255, 255, 255, .9);
+    box-shadow: 0 2px 5px #aaa; border-radius: .2rem;
 }
 .btn-conch:active{
-    background: rgba(0,0,0,.3);
-    /*background: rgba(78,166,234,1);*/
+    background: rgba(255, 255, 255, 1); color: #000;
 }
 
 
@@ -33,22 +32,21 @@ li{list-style: none;}
     -webkit-app-region: drag;
     position: fixed; z-index: 100;
     top: 0; left: 0; right: 0;
-    background: rgba(255, 255, 255, .9);
-    height: 2rem; line-height: 2rem;
+    height: 2rem; line-height: 2rem; padding-left: 1rem;
+    transition: all .2s ease; opacity: 0;
 }
-.header a{
+.header b{font-size: .9rem;}
+.header:hover{ opacity: 1; }
+.header .btn-conch{
     float: right;
     -webkit-app-region: no-drag;
-    opacity: 0; color: #aaa;
+    color: #999; box-shadow: none;
 }
-.header:hover a{ border-radius: 0; opacity: 1; }
-.header a:hover{ background-color: rgba(233,233,233,.86); color: #222; }
-#close:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
-.header a:last-child:active{ background: rgba(78, 166, 234, .9); }
+.header .btn-conch:hover{ background-color: rgba(233,233,233,.8); color: #444; border-radius: 0; }
+.header .btn-conch:first-child:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
+.header .btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
+.header .btn-conch:first-child:active{ background: rgba(189, 45, 48, .9); color: #fff; }
 
-.header span{
-    padding-left: .6rem;
-}
 
 
 .container{
@@ -56,11 +54,20 @@ li{list-style: none;}
     left: 0; top: 0; right: 0; bottom: 0;
     padding: 2rem .6rem;
     overflow: auto;
+    background-color: rgb(243,243,243);
+}
+.textarea{
+    display: block;
+    width: 90%; height: 90%;
+    margin: 0 auto; padding: 1rem;
+    outline: none; resize: none; border-radius: .2rem;
+    font: normal .94rem "Segeo UI","Microsoft Yahei";
+    color: #444; background: inherit;
 }
 
 
 .footer{
     position: absolute; z-index: 100;
-    right: 1rem; bottom: 1rem;
+    left: 1rem; bottom: 1rem;
 
 }
