--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -17,26 +17,15 @@ li{list-style: none;}
     width: 2rem; height: 2rem;
     text-align: center; line-height: 2rem;
     transition: all .2s ease;
-
-<<<<<<< HEAD
-    background: rgba(0,0,0,.1); color: #fff;
-    border-radius: 3px;
 }
 .btn-conch:hover{
-    border-radius: 1rem;
-    background: rgba(255,255,255,.94); color: #000;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 2px 5px #aaa;
+    border-radius: .2rem;
 }
 .btn-conch:active{
-    background: rgba(255,255,255,.5); color: #000;
-=======
-}
-.btn-conch:hover{
-    background-color: rgba(255, 255, 255, .9);
-    box-shadow: 0 2px 5px #aaa; border-radius: .2rem;
-}
-.btn-conch:active{
-    background: rgba(255, 255, 255, 1); color: #000;
->>>>>>> origin/master
+    box-shadow: 0 2px 5px #aaa inset;
+    background: rgba(243, 243, 243, .9); color: #000;
 }
 
 
@@ -44,12 +33,8 @@ li{list-style: none;}
     -webkit-app-region: drag;
     position: fixed; z-index: 100;
     top: 0; left: 0; right: 0;
-<<<<<<< HEAD
-    height: 2rem; line-height: 2rem;
-=======
     height: 2rem; line-height: 2rem; padding-left: 1rem;
     transition: all .2s ease; opacity: 0;
->>>>>>> origin/master
 }
 .header b{font-size: .9rem;}
 .header:hover{ opacity: 1; }
@@ -58,17 +43,11 @@ li{list-style: none;}
     -webkit-app-region: no-drag;
     color: #999; box-shadow: none;
 }
-<<<<<<< HEAD
-.header:hover a{ border-radius: 0; opacity: 1; }
 .header a:hover{ background-color: rgba(233,233,233,.86); color: #222; }
-#close:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
-.header a:last-child:active{ background: rgba(78, 166, 234, .9); color: #fff; }
-=======
 .header .btn-conch:hover{ background-color: rgba(233,233,233,.8); color: #444; border-radius: 0; }
 .header .btn-conch:first-child:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
 .header .btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
 .header .btn-conch:first-child:active{ background: rgba(189, 45, 48, .9); color: #fff; }
->>>>>>> origin/master
 
 
 
@@ -76,28 +55,13 @@ li{list-style: none;}
     position: absolute;
     left: 0; top: 0; right: 0; bottom: 0;
     overflow: auto;
-<<<<<<< HEAD
-    background: url('../image/bg.jpg') no-repeat;
-    background-size: cover;
-}
-.container a{
-    padding-top: 2rem;
-=======
-    background-color: rgb(243,243,243);
-}
-.textarea{
-    display: block;
-    width: 90%; height: 90%;
-    margin: 0 auto; padding: 1rem;
-    outline: none; resize: none; border-radius: .2rem;
-    font: normal .94rem "Segeo UI","Microsoft Yahei";
-    color: #444; background: inherit;
->>>>>>> origin/master
 }
 
 
 .footer{
     position: absolute; z-index: 100;
     left: 1rem; bottom: 1rem;
-
+}
+.footer a{
+    float: left;
 }
