--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -36,32 +36,43 @@ li{list-style: none;}
     height: 2rem; line-height: 2rem; padding-left: 1rem;
     transition: all .2s ease; opacity: 0;
 }
-.header b{font-size: .9rem;}
+.header b{font-size: .8rem;}
 .header:hover{ opacity: 1; }
-.header .btn-conch{
-    float: right;
+
+.header ul{
+    position: absolute;
+    right: 0; top: 0;
     -webkit-app-region: no-drag;
     color: #999; box-shadow: none;
 }
-.header a:hover{ background-color: rgba(233,233,233,.86); color: #222; }
-.header .btn-conch:hover{ background-color: rgba(233,233,233,.8); color: #444; border-radius: 0; }
-.header .btn-conch:first-child:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
-.header .btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
-.header .btn-conch:first-child:active{ background: rgba(189, 45, 48, .9); color: #fff; }
+.header li{
+    float: left;
+}
+
+.header .btn-conch:hover{
+    background-color: rgba(233,233,233,.8); color: #444;
+    border-radius: 0; box-shadow: none;
+}
+.header li:last-child .btn-conch:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
+.header i.btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
+.header li:last-child .btn-conch:active{ background: rgba(189, 45, 48, .9); color: #fff; }
 
 
 
 .container{
     position: absolute;
     left: 0; top: 0; right: 0; bottom: 0;
-    overflow: auto;
+    padding-top: 2rem;
+    overflow: auto; background: rgb(243,243,243);
+    /*background: rgb(66,66,66);*/
 }
 
 
 .footer{
     position: absolute; z-index: 100;
-    left: 1rem; bottom: 1rem;
+    left: 1rem; bottom: 1rem; right: 1rem;
+    text-align: center;
 }
 .footer a{
-    float: left;
+    display: inline-block;
 }
