--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -19,60 +19,55 @@ li{list-style: none;}
     transition: all .2s ease;
 }
 .btn-conch:hover{
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 1); color: #000;
     box-shadow: 0 2px 5px #aaa;
     border-radius: .2rem;
 }
 .btn-conch:active{
     box-shadow: 0 2px 5px #aaa inset;
-    background: rgba(243, 243, 243, .9); color: #000;
+    background: rgba(243, 243, 243, .9);
 }
 
 
 .header{
     -webkit-app-region: drag;
-    position: fixed; z-index: 100;
+    position: fixed; z-index: 200; transform: translateZ(0);
     top: 0; left: 0; right: 0;
-    height: 2rem; line-height: 2rem; padding-left: 1rem;
+    height: 2rem; line-height: 2rem; padding-left: .4rem; text-align: center;
     transition: all .2s ease; opacity: 0;
 }
-.header b{font-size: .8rem;}
 .header:hover{ opacity: 1; }
+.header b{font-size: .8rem;}
 
-.header ul{
+.winctl{
     position: absolute;
     right: 0; top: 0;
     -webkit-app-region: no-drag;
-    color: #999; box-shadow: none;
 }
-.header li{
-    float: left;
-}
-
-.header .btn-conch:hover{
+.winctl i{ float: left; }
+.winctl .btn-conch:hover{
     background-color: rgba(233,233,233,.8); color: #444;
     border-radius: 0; box-shadow: none;
 }
-.header li:last-child .btn-conch:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
-.header i.btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
-.header li:last-child .btn-conch:active{ background: rgba(189, 45, 48, .9); color: #fff; }
+.winctl .btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
+.winctl .btn-conch:last-child:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
+.winctl .btn-conch:last-child:active{ background: rgba(189, 45, 48, .9); color: #fff; }
 
 
 
 .container{
     position: absolute;
     left: 0; top: 0; right: 0; bottom: 0;
-    padding-top: 2rem;
     overflow: auto; background: rgb(243,243,243);
     /*background: rgb(66,66,66);*/
 }
 
 
 .footer{
-    position: absolute; z-index: 100;
-    left: 1rem; bottom: 1rem; right: 1rem;
+    position: absolute;
+    left: 0; bottom: 0; right: 0;
     text-align: center;
 }
-.footer a{
-    display: inline-block;
+.footer li{
+    float: left;
 }
