--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -19,39 +19,39 @@ li{list-style: none;}
     transition: all .2s ease;
 }
 .btn-conch:hover{
-    background-color: rgba(255, 255, 255, 1); color: #000;
-    box-shadow: 0 2px 5px #aaa;
-    border-radius: .2rem;
+    /*background-color: rgba(255, 255, 255, 1); */
+    color: #000;
+    /*box-shadow: 0 2px 5px #aaa;*/
 }
 .btn-conch:active{
-    box-shadow: 0 2px 5px #aaa inset;
+    /*box-shadow: 0 2px 5px #aaa inset;*/
     background: rgba(243, 243, 243, .9);
 }
 
 
 .header{
     -webkit-app-region: drag;
-    position: fixed; z-index: 200; transform: translateZ(0);
+    position: absolute; z-index: 200; transform: translateZ(0);
     top: 0; left: 0; right: 0;
-    height: 2rem; line-height: 2rem; padding-left: .4rem; text-align: center;
+    height: 2rem; line-height: 2rem;
     transition: all .2s ease; opacity: 0;
 }
 .header:hover{ opacity: 1; }
-.header b{font-size: .8rem;}
 
 .winctl{
     position: absolute;
     right: 0; top: 0;
+    color: #aaa;
     -webkit-app-region: no-drag;
 }
-.winctl i{ float: left; }
+.winctl li{ float: left; }
 .winctl .btn-conch:hover{
     background-color: rgba(233,233,233,.8); color: #444;
     border-radius: 0; box-shadow: none;
 }
 .winctl .btn-conch:active{ background: rgba(78, 166, 234, .9); color: #fff; }
-.winctl .btn-conch:last-child:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
-.winctl .btn-conch:last-child:active{ background: rgba(189, 45, 48, .9); color: #fff; }
+.winctl li:last-child .btn-conch:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
+.winctl li:last-child .btn-conch:active{ background: rgba(189, 45, 48, .9); color: #fff; }
 
 
 
@@ -63,11 +63,32 @@ li{list-style: none;}
 }
 
 
-.footer{
+.menu{
     position: absolute;
-    left: 0; bottom: 0; right: 0;
-    text-align: center;
+    left: 0; top: 0; bottom: 0; right: 0;
+    max-width: 30rem;
+    background: #ddd;
 }
-.footer li{
-    float: left;
+
+
+.main{
+    position: absolute; z-index: 100;
+    right: 0; top: 0; bottom: 0; left: 10rem;
+    overflow: auto;
+    background: rgba(243, 243, 243, 0.5);
+}
+.widen{
+    display: block; height: 100%; width: 1px;
+    position: absolute; left: 0;
+    cursor: col-resize;
+    background: #aaa;
+}
+
+
+
+.console{
+    position: absolute;
+    bottom: 0; left: 0; right: 0;
+    min-height: 2rem; line-height: 2rem;
+    border-top: 1px solid #ccc;
 }
