--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -66,22 +66,38 @@ li{list-style: none;}
 .menu{
     position: absolute;
     left: 0; top: 0; bottom: 0; right: 0;
-    max-width: 30rem;
     background: #ddd;
 }
+.menu nav{
+    width: 2.4rem; height: 100%;
+    background: #ccc; box-shadow: -5px 3px 5px #bbb inset;
+    /*background: rgb(66,66,66);*/
+    -webkit-app-region: drag;
+}
+.menu nav i{
+    width: 2.4rem; height: 2.4rem; line-height: 2.4rem;
+    font-size: 1.2rem; color: #666;
+    -webkit-app-region: no-drag;
+}
+.menu nav i:active, .menu nav i.active{
+    background: #ddd;
+    box-shadow: -5px 3px 5px #aaa;
+}
+
 
 
 .main{
     position: absolute; z-index: 100;
-    right: 0; top: 0; bottom: 0; left: 10rem;
+    right: 0; top: 0; bottom: 0; left: 15.4rem;
     overflow: auto;
-    background: rgba(243, 243, 243, 0.5);
+    background: rgb(243, 243, 243); box-shadow: -3px 0 5px #bbb;
+    /*background: rgb(66,66,66);*/
 }
 .widen{
     display: block; height: 100%; width: 1px;
     position: absolute; left: 0;
+    border-left: 1px solid transparent;
     cursor: col-resize;
-    background: #aaa;
 }
 
 
