--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -3,7 +3,7 @@ body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,figure,fieldse
 a{text-decoration: none;color: #333;}
 body{font: 16px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
 ::selection{background: #222;color: #fff;}
-::-webkit-scrollbar{width: 3px;height: 3px;}
+::-webkit-scrollbar{width: .5rem;height: .5rem;}
 ::-webkit-scrollbar-button{display: none;}
 ::-webkit-scrollbar-thumb{ background: #aaa; }
 ::-webkit-scrollbar-corner{display: none;}
