--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -65,7 +65,7 @@ li{list-style: none;}
 .menu{
     position: absolute;
     left: 0; top: 0; bottom: 0; right: 0;
-    background: #ccc; font-size: .9375rem; cursor: default;
+    background: #bbb; font-size: .9375rem; cursor: default;
 }
 .menu nav{
     float: left; width: 2.4rem; height: 100%;
@@ -73,24 +73,31 @@ li{list-style: none;}
     -webkit-app-region: drag;
 }
 .menu nav i{
+    position: relative; z-index: 1;
     width: 2.4rem; height: 2.4rem; line-height: 2.4rem;
     font-size: 1.2rem; color: #666;
     -webkit-app-region: no-drag;
 }
-.menu nav i:active, .menu nav i.active{
+.menu nav i:active{
     background: #ddd;
-    box-shadow: -5px 3px 5px #aaa;
 }
+.menu .nav-o{
+    position: absolute; z-index: 0;
+    left: 0; top: 0;
+    background: #ddd; box-shadow: -5px 3px 5px #aaa;
+}
+
 .menu-a{
     float: left;
     width: 13rem; height: 100%;
     background: #ddd;
 }
 .menu-a header{
-    padding: 0 .4rem;
-    font-weight: bold; color: #666; line-height: 1.8rem;
+    padding: 0 .4rem; font-weight: bold;
 }
-
+.menu-b{
+    width: 13rem;
+}
 
 .main{
     position: absolute; z-index: 100;
@@ -98,7 +105,7 @@ li{list-style: none;}
     overflow: auto; transition: all .2s ease;
     background: rgb(243, 243, 243); box-shadow: -3px 0 5px #bbb;
 }
-.widen{
+#widen{
     display: block; height: 100%; width: 1px;
     position: absolute; left: 0; z-index: 10;
     border-left: 1px solid transparent;
