--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -3,7 +3,7 @@ body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,figure,fieldse
 a{text-decoration: none;color: #333;}
 body{font: 16px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
 ::selection{background: #222;color: #fff;}
-::-webkit-scrollbar{width: .3rem;height: .3rem;}
+::-webkit-scrollbar{width: .4rem;height: .4rem;}
 ::-webkit-scrollbar-button{display: none;}
 ::-webkit-scrollbar-thumb{ background: #aaa; }
 ::-webkit-scrollbar-corner{display: none;}
@@ -43,7 +43,12 @@ li{list-style: none;}
     background-color: rgba(233,233,233,.8); color: #444;
     border-radius: 0; box-shadow: none;
 }
-.winctl .btn-conch:active, .menuctl:active{ background: rgba(78, 166, 234, .9); color: #fff; }
+.console .btn-conch:active,
+.winctl .btn-conch:active,
+.menuctl:active{
+    background: rgba(78, 166, 234, .9);
+    color: #fff;
+}
 .winctl li:last-child .btn-conch:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
 .winctl li:last-child .btn-conch:active{ background: rgba(189, 45, 48, .9); color: #fff; }
 .menuctl{
@@ -67,13 +72,11 @@ li{list-style: none;}
 .menu nav{
     float: left; width: 2.4rem; height: 100%;
     background: #ccc; box-shadow: -5px 3px 5px #bbb inset;
-    -webkit-app-region: drag;
 }
 .menu nav i{
     position: relative; z-index: 1;
     width: 2.4rem; height: 2.4rem; line-height: 2.4rem;
     font-size: 1.2rem; color: #666;
-    -webkit-app-region: no-drag;
 }
 .menu nav i:active{ transform: scale(.88); }
 .menu .nav-o{
@@ -87,6 +90,7 @@ li{list-style: none;}
     width: 26rem; height: 100%; min-width: 13rem;
     background: #ddd; font-size: .8rem;
     overflow: auto; transition: all .2s ease;
+    user-select: none;
 }
 .menu-a section{ display: none; }
 .menu-a section.show{ display: block; }
@@ -130,6 +134,7 @@ li{list-style: none;}
     position: absolute; left: 2.4rem; top: 0;
     width: 13rem; height: 100%; border-right: 1px solid #aaa;
     background: #ddd; font-size: .8rem; letter-spacing: 1px;
+    user-select: none;
 }
 .menu-b header{
     z-index: 0;
@@ -137,12 +142,15 @@ li{list-style: none;}
 }
 .menu-b li{
     margin-bottom: -1px; padding: .6rem;
-    border-top: 1px solid #aaa;
-    border-bottom: 1px solid #aaa;
+    border-top: 1px solid #aaa; border-bottom: 1px solid #aaa;
     text-align: justify; line-height: 1rem;
+    transition: all .1s ease;
 }
 .menu-b li:hover{
     background: #ccc;
+}
+.menu-b li.active{
+    background: rgba(0, 116, 224, 1); color: #efefef;
 }
 
 .main{
@@ -161,15 +169,14 @@ li{list-style: none;}
 .editor-box{
     position: absolute;
     left: 0; top: 2rem; bottom: 2rem; right: 0;
-    overflow: auto;
+    overflow: auto; padding: 2rem 0 0;
 }
 .editor{
-    resize: none; outline: none;
-    position: absolute;
-    left: 0; right: 0; top: 2rem; bottom: 0;
-    min-width: 20rem; width: 94%; padding: 1.5rem 3%;
-    background: #ededed; color: #444;
-    font: normal .9375rem/1.57rem "Segoe UI","Microsoft YaHei",sans-serif; letter-spacing: 1px;
+    resize: none; outline: none; display: block;
+    max-width: 666px; width: 94%; height: 100%;
+    padding: 0 3%; margin: 0 auto;
+    background: inherit; color: #444;
+    font: normal .9375rem/1.2rem "Segoe UI","Microsoft YaHei",sans-serif; letter-spacing: 1px;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -177,5 +184,8 @@ li{list-style: none;}
     position: absolute;
     bottom: 0; left: 0; right: 0;
     min-height: 2rem; line-height: 2rem;
-    border-top: 1px solid #ccc;
+    opacity: 0; transition: all .2s ease;
+}
+.console:hover{
+    opacity: 1;
 }
