--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -10,7 +10,12 @@ body{font: 16px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
 li{list-style: none;}
 .clearfix:after{ content:" "; display:block; height:0; clear:both; visibility: hidden;}
 .clearfix{*zoom:1;}/*IE/7/6*/
-
+select{
+    border: none;
+    padding: 0 .2rem;
+    -webkit-appearance: none;
+    background: transparent;
+}
 
 .btn-conch{
     display: block;
@@ -173,7 +178,7 @@ li{list-style: none;}
 }
 .editor{
     resize: none; outline: none; display: block;
-    max-width: 666px; width: 94%; height: 100%;
+    max-width: 41.625rem; min-width: 19rem;width: 94%; height: 100%;
     padding: 0 3%; margin: 0 auto;
     background: inherit; color: #444;
     font: normal .9375rem/1.2rem "Segoe UI","Microsoft YaHei",sans-serif; letter-spacing: 1px;
@@ -188,4 +193,7 @@ li{list-style: none;}
 }
 .console:hover{
     opacity: 1;
+}
+.console li{
+    float: right;
 }
