--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -178,7 +178,7 @@ li{list-style: none;}
 .main{
     position: absolute; z-index: 100;
     right: 0; top: 0; bottom: 0; left: 15.4rem;
-    overflow: auto; transition: all .2s ease;
+    overflow: hidden; transition: all .2s ease;
     background: rgb(243, 243, 243); box-shadow: -3px 0 5px #bbb;
 }
 #widen{
@@ -187,11 +187,19 @@ li{list-style: none;}
     border-left: 1px solid transparent;
     cursor: col-resize;
 }
-
-/* 编辑盒子 */
-.editor-box{
+.webview{
     position: absolute;
     left: 0; top: 2rem; bottom: 2rem; right: 0;
+    display: none; opacity: 0; transform: scale(1.05);
+    transition: none;
+}
+.webview.show{
+    opacity: 1; transform: scale(1);
+}
+
+/* 编辑盒子 & 阅读盒子 */
+.editor-box,
+.reader-box{
     overflow: auto; padding: 2rem 0 0;
 }
 .editor{
@@ -202,6 +210,7 @@ li{list-style: none;}
     font: normal .9375rem/1.2rem "Segoe UI","Microsoft YaHei",sans-serif; letter-spacing: 1px;
     -webkit-font-smoothing: antialiased;
 }
+
 
 /* 内容区底部栏 */
 .console{
