--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -1,7 +1,7 @@
-article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block}
-body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,figure,fieldset,legend,button,img,input,textarea,th,td{margin:0;padding:0;border:0;}
+article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block;}
+body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,menu,pre,form,figure,fieldset,legend,button,img,input,textarea,th,td{margin:0;padding:0;border:0;}
 a{text-decoration: none;color: #333;}
-body{font: 16px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
+body{font: 13px/24px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
 ::selection{background: #222;color: #fff;}
 ::-webkit-scrollbar{width: .4rem;height: .4rem;}
 ::-webkit-scrollbar-button{display: none;}
@@ -11,215 +11,125 @@ li{list-style: none;}
 .clearfix:after{ content:" "; display:block; height:0; clear:both; visibility: hidden;}
 .clearfix{*zoom:1;}/*IE/7/6*/
 
-/* 全局样式 */
-.btn-conch{
-    display: block;
-    width: 2rem; height: 2rem;
-    text-align: center; line-height: 2rem;
-    transition: all .2s ease;
-}
-.btn-conch:hover{
-    color: #000;
+.btn{
+    display: inline-block; vertical-align: middle;
+    padding: 4px 6px;
+    transition: transform .1s ease;
 }
 
-/* 容器 */
 .container{
     position: absolute;
-    left: 0; top: 0; right: 0; bottom: 0;
-    overflow: auto; background: rgb(243,243,243);
+    top: 0; left: 0; right: 0; bottom: 0;
+    display: flex;
+    overflow: hidden;
 }
-
-/* 内容区顶部栏 */
-.header{
+.app-control{
+    float: right;
+    -webkit-app-region: no-drag;
+}
+.aside{
+    display: flex; flex-direction: column; justify-content: space-between;
+    padding: 20px 0;
+    background: #444; color: #ccc; box-shadow: inset -2px 0 2px #333;
+    background-image: linear-gradient(90deg, #333 0%, #444 100%);
     -webkit-app-region: drag;
-    position: absolute; z-index: 200; transform: translateZ(0);
-    top: 0; left: 0; right: 0;
-    height: 2rem; line-height: 2rem;
-    transition: all .2s ease; opacity: 0;
 }
-.header:hover{ opacity: 1; }
-
-.winctl{
-    position: absolute;
-    right: 0; top: 0;
-    color: #aaa;
-    -webkit-app-region: no-drag;
+.navs{ -webkit-app-region: no-drag; }
+.navs > i{
+    display: block;
+    margin: 4px 0;
+    font-size: 1.1rem;
+    transition: all .15s ease;
 }
-.winctl li{ float: left; }
-.winctl .btn-conch:hover{
-    background-color: rgba(233,233,233,.8); color: #444;
-    border-radius: 0; box-shadow: none;
+.navs > i:hover{ color: #fff; }
+.navs > i:active, .btn:active{ transform: scale(.94); }
+.window{
+    display: none; flex: 1;
 }
-.console .btn-conch:active,
-.winctl .btn-conch:active,
-.menuctl:active{
-    background: rgba(78, 166, 234, .9);
-    color: #fff;
-}
-.winctl li:last-child .btn-conch:hover{ background: rgba(224, 67, 67, .9); color: #fff; }
-.winctl li:last-child .btn-conch:active{ background: rgba(189, 45, 48, .9); color: #fff; }
-.menuctl{
-    -webkit-app-region: no-drag;
-    position: absolute; left: 0; z-index: 10;
-    transition: none;
-}
-
-
-/* 目录栏 */
-.menu{
-    position: absolute;
-    left: 0; top: 0; bottom: 0; right: 0;
-    background: #bbb; cursor: default;
-}
-.menu nav{
-    float: left; width: 2.4rem; height: 100%;
-    background: #ccc; box-shadow: -5px 3px 5px #bbb inset;
-}
-.menu nav i{
-    position: relative; z-index: 1;
-    width: 2.4rem; height: 2.4rem; line-height: 2.4rem;
-    font-size: 1.2rem; color: #666;
-}
-.menu nav i:active{ transform: scale(.88); }
-.menu .nav-o{
-    position: absolute; z-index: 0;
-    left: 0; top: 0;
-    background: #ddd; box-shadow: -5px 3px 5px #aaa;
-}
-
-/* 一级目录 */
-.menu-a{
-    float: left; position: relative;
-    width: 26rem; height: 100%; min-width: 13rem;
-    background: #ddd; font-size: .8rem;
-    overflow: auto; transition: all .2s ease;
-    user-select: none;
-}
-.menu-a section{ display: none; }
-.menu-a section.show{ display: block; }
-
-.menu-a header, .menu-b header{
-    position: sticky; top: 0; z-index: 10; transform: translateZ(0);
-    padding: .45rem; font-size: 1rem;
+.window.on{ display: flex; }
+.menus{
+    overflow: hidden;
+    transition: all .3s ease;
     background: #ddd;
+    position: relative;
 }
-
-.folder-header{
-    padding: 0 .45rem;
+.menu{
+    box-sizing: border-box;
+    width: 0; height: 100%;
+    overflow: hidden;
+    background: inherit;
+    transition: all .1s ease;
+}
+.list{
+    position: absolute;
+    left: 0; right: 0; bottom: 0; top: 0;
+    background: inherit;
+    transition: transform .2s ease;
+}
+.list.out{ transform: translateX(-100%); }
+.menu.on{ width: 250px; overflow: auto; }
+.menu h3, .list h3{
+    position: sticky; top: 0;
+    padding: 4px 10px;
+    background: inherit;
     white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
 }
-.folder-header:hover{ background: #ccc; }
-.folder-header > i{
+.list h3{ text-align: right; }
+.list h3 i{ float: left; padding: 0; }
+.list li{
+    margin-bottom: -1px; padding: .6rem;
+    text-align: justify; cursor: default;
+    border-top: 1px solid #aaa; border-bottom: 1px solid #aaa;
+    line-height: 1.45;
+    transition: all .1s ease;
+}
+.list p{
+    -webkit-line-clamp: 2; -webkit-box-orient: vertical;
+    display: -webkit-box; overflow: hidden; text-overflow: ellipsis;
+}
+.list li.selected{ background: rgb(0,116,224); color: #efefef; }
+.menu .item{
+    cursor: default;
+    user-select: none;
+}
+.item > ul:empty:after{
+    display: block; text-align: center;
+    content: "it's empty"; color: #aaa;
+    font-family: 'Segoe Print';
+}
+.folder:hover, .item ul li:hover{ background: #ccc; }
+.item ul li:active{ background: #bcbcbc; }
+.folder{
+    padding: .1rem .45rem;
+    white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+}
+.folder > i{
     display: inline-block; margin-right: .1rem;
     transition: transform .05s ease;
 }
-.expanded .folder-header > i{ transform: rotate(90deg); }
-.folder ul{
-    height: 0; overflow: hidden; margin: 0;
-    transition: all .3s ease;
-}
-.expanded ul{
-    margin: 0 0 .4rem; padding: .4rem 0;
-    height: auto; border-bottom: 1px solid #aaa;
-}
-.folder li{
-    padding: .1rem 1rem;
+.item li{
+    padding: 0 1rem;
     white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
 }
-.folder li i{ margin-right: .4rem; }
-.folder ul li:hover{ background: #ccc; }
-.nonelist{ opacity: .6; }
+.item li i{ margin-right: .4rem; vertical-align: middle; }
+.item > ul{
+    height: 0; margin: 0;
+    overflow: hidden; border-bottom: 1px solid transparent;
+    transition: all .25s ease;
+}
+.expand ul{
+    height: auto; margin: 0 0 .4rem; padding: .4rem 0;
+    border-color: #aaa;
+}
+.expand .folder > i{ transform: rotate(90deg); }
+.icon-unchecked, .icon-checked{ display: none; }
+.checking{ display: inline; color: #0389ff; }
 
-.setting label{
-    float: left; clear: left;
-    margin: 0 .4rem;
-}
-.setting select{
-    float: left;
-    padding: .1rem .2rem; border-radius: .2rem;
-    background-image: linear-gradient(to top, hsl(0, 0%, 96%), hsl(0, 0%, 99%));
-    outline: none; font-family: "Segoe UI","Microsoft YaHei",sans-serif;
-    transition: all .2s ease;
-
-}
-.setting select:hover{
-    background-image: linear-gradient(to top, hsl(0, 0%, 96%), hsl(0, 0%, 99%));
-}
-.setting option{
-    transition: .2s ease;
-}
-
-/* 二级目录 */
-.menu-b{
-    box-sizing: border-box;
-    position: absolute; left: 2.4rem; top: 0;
-    width: 13rem; height: 100%; border-right: 1px solid #aaa;
-    background: #ddd; font-size: .8rem; letter-spacing: 1px;
-    user-select: none;
-}
-.menu-b header{
-    z-index: 0;
-    text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
-}
-.menu-b li{
-    margin-bottom: -1px; padding: .6rem;
-    border-top: 1px solid #aaa; border-bottom: 1px solid #aaa;
-    text-align: justify; line-height: 1rem;
-    transition: all .1s ease;
-}
-.menu-b li:hover{
-    background: #ccc;
-}
-.menu-b li.active{
-    background: rgba(0, 116, 224, 1); color: #efefef;
-}
-
-/* 内容区 */
 .main{
-    position: absolute; z-index: 100;
-    right: 0; top: 0; bottom: 0; left: 15.4rem;
-    overflow: hidden; transition: all .2s ease;
-    background: rgb(243, 243, 243); box-shadow: -3px 0 5px #bbb;
-}
-#widen{
-    display: block; height: 100%; width: 1px;
-    position: absolute; left: 0; z-index: 10;
-    border-left: 1px solid transparent;
-    cursor: col-resize;
-}
-.webview{
-    position: absolute;
-    left: 0; top: 2rem; bottom: 2rem; right: 0;
-    display: none; opacity: 0; transform: scale(1.05);
-    transition: none;
-}
-.webview.show{
-    opacity: 1; transform: scale(1);
-}
-
-/* 编辑盒子 & 阅读盒子 */
-.editor-box,
-.reader-box{
-    overflow: auto; padding: 2rem 0 0;
+    position: relative;
+    flex: 1;
 }
 .editor{
-    resize: none; outline: none; display: block;
-    max-width: 41.625rem; min-width: 19rem;width: 94%; height: 100%;
-    padding: 0 3%; margin: 0 auto;
-    background: inherit; color: #444;
-    font: normal .9375rem/1.2rem "Segoe UI","Microsoft YaHei",sans-serif; letter-spacing: 1px;
-    -webkit-font-smoothing: antialiased;
-}
-
-
-/* 内容区底部栏 */
-.console{
-    position: absolute;
-    bottom: 0; left: 0; right: 0;
-    min-height: 2rem; line-height: 2rem;
-    opacity: 0; transition: all .2s ease;
-}
-.console:hover{ opacity: 1; }
-.console li{
-    float: right;
+    box-sizing: border-box;
+    max-width: 666px;
 }
