--- a/assets/css/conch.css
+++ b/assets/css/conch.css
@@ -1,21 +1,6 @@
-article,aside,dialog,footer,header,section,footer,nav,figure,menu{display:block;}
-body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,menu,pre,form,figure,fieldset,legend,button,img,input,textarea,th,td{margin:0;padding:0;border:0;}
-a{text-decoration: none;color: #333;}
-body{font: 14px/20px "Segoe UI","Microsoft YaHei",sans-serif;color: #444;}
-::selection{background: #222;color: #fff;}
-::-webkit-scrollbar{width: .4rem;height: .4rem;}
-::-webkit-scrollbar-button{display: none;}
-::-webkit-scrollbar-thumb{ background: #aaa; border-radius: 3px;}
-::-webkit-scrollbar-corner{display: none;}
-li{list-style: none;}
-.clearfix:after{ content:" "; display:block; height:0; clear:both; visibility: hidden;}
-.transless{ transition: none !important; }
-
-.container, .mask{
-    position: absolute;
-    left: 0; right: 0; top: 0; bottom: 0;
+.container{
     display: flex;
-    overflow: hidden;
+    background-color: #f3f3f3;
 }
 .btn{
     display: inline-block;
@@ -34,6 +19,7 @@ li{list-style: none;}
     width: 250px; max-width: 50%; max-height: 100%;
     padding-bottom: 10px;
 }
+.sider.hidden{ display: none; }
 .sider header{
     padding: 10px 10px 5px;
     -webkit-app-region: drag;
@@ -46,13 +32,17 @@ li{list-style: none;}
     flex-grow: 1;
     padding: 0 10px 20px; margin: 0 10px;
     background: rgba(255,255,255,.9);
+    box-shadow: 0 2px 12px rgba(0,0,0,.13);
     border-radius: 10px;
     overflow: auto;
     cursor: default; user-select: none;
 }
+.menu > ul{ background: inherit; }
+.menu ul.hidden{ display: none; }
 .menu .tools{
     position: sticky; top: 0; z-index: 1;
-    padding: 10px 5px; margin-bottom: 10px;
+    padding: 0 5px;
+    height: 42px; line-height: 42px;
     display: flex; justify-content: space-around;
     background: inherit;
 }
@@ -64,8 +54,8 @@ li{list-style: none;}
     border-radius: 2px;
     white-space: nowrap;
 }
-.menu .item.selected{ background-color: #eee; }
-.menu .iconfont{ font-size: 17px; vertical-align: middle; display: inline-block; }
+.menu .item.selected{ background: rgba(233,233,233,.9); }
+.menu .iconfont{ vertical-align: middle; display: inline-block; }
 .menu span{ vertical-align: middle; }
 .menu li ul{
     height: 0; padding: 0;
@@ -78,6 +68,13 @@ li.expand > ul:not(:empty){
 }
 .icon-tri{ transition: transform .2s ease; }
 .expand .icon-tri{ transform: rotate(90deg); }
+.menu h4{
+    position: sticky;
+    top: 42px;
+    padding-bottom: 10px;
+    background: inherit;
+}
+.menu h4 .iconfont{ margin: 3px 10px 0 0; font-size: 16px; font-weight: normal; }
 .menu footer{
     position: absolute; z-index: 1;
     left: 50%; bottom: 20px;
@@ -85,7 +82,7 @@ li.expand > ul:not(:empty){
     transition: transform .1s ease;
 }
 .menu footer a{ margin: 2px; }
-.menu footer a:active{ background-color: #eee; }
+.menu footer a:active{ filter: brightness(.94); }
 .checking footer{ transform: translateX(-50%) scale(1); }
 .menucontext{
     position: absolute; z-index: 100;
@@ -109,8 +106,11 @@ li.expand > ul:not(:empty){
 .menucontext li{
     display: inline-block;
     margin: 0 4px;
+    border-radius: 3px;
+    background: inherit;
 }
-.menucontext li:hover{ color: #000; background: #eee; }
+.menucontext li:hover{ color: #000; filter: brightness(.94); }
+.menufolder li:first-child{ display: none; }
 
 /* 内容区 */
 .content{ position: relative; flex: 1; }
@@ -129,7 +129,6 @@ li.expand > ul:not(:empty){
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
-    border-radius: 0 0 4px 4px;
     background: inherit;
 }
 .tabs a{
@@ -137,13 +136,10 @@ li.expand > ul:not(:empty){
     position: relative;
     max-width: 150px;
     padding: 0 10px;
-    background: #fff;
-    border-right: 1px solid #f3f3f3;
+    background: rgba(255,255,255,.9);
+    border-right: 1px solid transparent;
     white-space: nowrap; overflow: hidden; text-align: center; text-overflow: ellipsis;
     -webkit-app-region: no-drag;
-}
-.tabs a:last-child{
-    border-bottom-right-radius: 4px;
 }
 .tabs i{
     display: inline-block;
@@ -159,7 +155,7 @@ li.expand > ul:not(:empty){
 .tabs i:hover{ background: #409cff; color: #fff; }
 .tabs .active{
     flex: 1 0 auto;
-    background: #d2d2d2;
+    background: #3d3d3d; color: #fff; border-color: #3d3d3d;
     flex-shrink: 0;
     z-index: 1;
 }
@@ -174,27 +170,37 @@ li.expand > ul:not(:empty){
     position: absolute;
     top: 32px; left: 0; right: 0; bottom: 0;
     display: flex;
+    user-select: none;
 }
-.iframe{
+.controls{
+    position: absolute;
+    left: 0; bottom: 0;
+    padding: 10px;
+}
+.controls li{
+    margin: 6px 0; padding: 3px 5px 3px 6px;
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 2px 12px rgba(0,0,0,.13);
+    transition: transform .1s ease;
+}
+.controls:hover li{ transform: scale(1); }
+.controls li:active{ filter: brightness(.94); }
+.window{
     flex: 1;
     height: 100%;
     border: none;
     box-sizing: border-box;
-}
-
-/* 对话框 */
-.mask{
-    background: rgba(0,0,0,.5);
-    z-index: 500;
-    overflow: auto;
-    flex-direction: column;
-    justify-content: center;
     display: none;
 }
-.dialog{
-    min-width: 50px; min-height: 50px;
-    margin: 50px auto; padding: 10px;
-    background: #fff;
-    border-radius: 4px;
-    overflow: auto;
+.window.on{ display: block; }
+
+
+/* 纯净模式 */
+.clear .header,
+.clear .controls{
+    transition: opacity .2s ease 1s;
+    opacity: 0;
 }
+.clear .header:hover,
+.clear .controls:hover{ opacity: 1; transition: opacity .05s ease; }
