--- a/assets/css/setting.css
+++ b/assets/css/setting.css
@@ -23,23 +23,24 @@ select:hover,
 label{ vertical-align: middle; }
 
 .section{
-    margin: 50px 48px;
+    margin: 80px 48px;
 }
 .section:first-child{ margin-top: 20px; }
 .section h2{
+    position: relative;
     box-sizing: border-box;
-    padding: 3px 0 5px 12px; margin: 0 0 30px;
-    border-left: 8px solid #444;
+    padding: 3px 0 10px; margin: 0 0 30px;
 }
 
 .row{
     margin: 20px 0;
     display: flex;
+    flex-wrap: wrap;
 }
 .row span, .row i{ vertical-align: middle; }
 .label{
     display: inline-block;
-    width: 100px;
+    width: 100px; height: fit-content;
     margin-right: 10px; padding-top: .1rem;
     flex-shrink: 0;
     font-weight: 500;
