--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -7,7 +7,7 @@ article,aside,dialog,footer,header,section,footer,nav,figure,menu,img,video,audi
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dialog,dl,dt,dd,ul,ol,li,iframe,pre,form,figure,fieldset,legend,button,input,textarea,th,td{ margin: 0; padding: 0; border: 0; }
 a{ color: inherit; text-decoration: none; cursor: pointer; transition: all .24s; }
 b,strong{ font-weight: 700; }
-html,body{ position: relative; color: var(--color); font: normal 400 14px Consolas, 'Microsoft Yahei'; line-height: 1.425; overflow-x: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; }
+html,body{ position: relative; color: var(--color); font: normal 400 14px Consolas, 'Microsoft Yahei'; line-height: 1.425; overflow-x: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; background: var(--background); }
 input, button, textarea, select{ font: inherit; }
 input:-webkit-autofill{ background-color: initial; }
 ul,li,ol{ list-style: none; }
@@ -33,12 +33,45 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
     -webkit-app-region: no-drag;
 }
 .nav{
-    padding: .28em .48em;
-    border-radius: 0 0 2px 2px;
+    padding: 4px 8px;
     -webkit-app-region: no-drag;
 }
-.nav:hover{
+.nav:hover,
+.dropdown:hover > .nav{
     background: rgba(255, 255, 255, .6);
+}
+.dropdown{
+    position: relative;
+    display: flex;
+}
+.context{
+    display: none;
+    position: absolute;
+    left: 0; top: 100%;
+    padding: 4px 0;
+    white-space: nowrap;
+    background: rgba(255, 255, 255, .5);
+    box-shadow: 0 3px 3px rgba(0, 0, 0, .05);
+    backdrop-filter: blur(10px);
+    border-radius: 0 0 2px 2px;
+    user-select: none;
+}
+.leftward{
+    left: auto; right: 0;
+}
+.li{
+    display: flex;
+    align-items: center;
+    padding: 4px 12px;
+}
+.li:hover{
+    background: rgba(255,255,255,.25);
+}
+.dropdown:hover > .context {
+    display: block;
+}
+.context .iconfont{
+    margin: 0 8px 0 0;
 }
 
 .content{
@@ -49,24 +82,26 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
 }
 .section{
     position: relative;
-    display: flex;
-    flex-direction: column;
     flex: 1 1 0;
+    overflow: auto;
+    transition: all .24s;
 }
 .editor{
     box-sizing: border-box;
-    flex: 1 1 0;
+    margin: 0 auto;
     padding: 1em;
+    width: 720px;
+    min-height: 100%;
+    max-width: 100%;
     outline: none;
-    overflow: hidden;
     transition: all .24s;
     word-break: break-all;
 }
-.editor:hover{
-    overflow: auto;
-}
 .editor:focus{
-    background: #fff;
+    background: rgba(255,255,255,.6);
+}
+.editor:empty:before{
+    
 }
 .title{
     display: flex;
